Removed dependency on 'apache.commons.*'
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>